--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "scripts": {
     "clean": "rm ./src/*.js ./src/*.js.map",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "start": "live-server --wait=1000 ./src"
   },
   "dependencies": {
-    "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.4",
+    "live-server": "^1.2.2"
   }
 }
