--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "stylelint": "^16.11.0",
+    "typescript": "^5.5.4"
   }
 }
