--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "http://127.0.0.1:8080/",
+  "id": "https://yannickbattail.github.io/sabre-laser-match/src/index.html",
   "name": "Match Sabre laser ",
   "short_name": "MatchSabreLaser",
   "description": "Décompte des points d'un match de sabre laser au plus proche de la FFE.",
@@ -8,8 +8,8 @@
   ],
   "lang": "fr",
   "dir": "ltr",
-  "start_url": "http://127.0.0.1:8080/",
-  "scope": "http://127.0.0.1:8080/",
+  "start_url": "https://yannickbattail.github.io/sabre-laser-match/src/index.html",
+  "scope": "https://yannickbattail.github.io/sabre-laser-match/src/",
   "display": "standalone",
   "orientation": "natural",
   "prefer_related_applications": false,
