--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "clean": "rm ./src/*.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "start": "live-server --wait=1000 ./src"
-  },
-  "dependencies": {
+    "start": "live-server --wait=1000 ./src",
+    "lint": "eslint --fix ./src/*.ts"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "live-server": "^1.2.2",
     "stylelint": "^16.11.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.18.1"
   }
 }
