--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:watch": "tsc --watch",
     "start": "live-server --wait=1000 ./src",
     "lint": "eslint --fix ./src/*.ts",
-    "format": "prettier -w ."
+    "format": "stylelint ./src/*.css && prettier -w ."
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
